--- a/_posts/2023-02-01-系统中断之aarch64.markdown
+++ b/_posts/2023-02-01-系统中断之aarch64.markdown
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "系统中断和异常之aarch64"
+title:  "系统中断之aarch64"
 date:   2023-02-01 21:22:07 +0000
 categories: jekyll
 tags: kernel interrupt
